Use true gray instead of blue gray in dark mode. Prevent fetching user preferences when entering Preferences Page

--- a/src/pages/PreferencesPage/style.scss
+++ b/src/pages/PreferencesPage/style.scss
@@ -4,7 +4,7 @@
     min-width: 20rem;
     border-right: var(--border-narrow);
     font-weight: var(--weight-medium);
-    color: var(--color-primary);
+    color: var(--color-text);
     padding: var(--spacing-xl);
   }
 
